Removed slug input and auto-generated based off of handle; fixed card overflow issue (#62)

--- a/resources/scss/components/_card.scss
+++ b/resources/scss/components/_card.scss
@@ -1,5 +1,5 @@
 .card {
-    @apply rounded shadow bg-white relative overflow-hidden;
+    @apply rounded shadow bg-white relative;
 
     &__body {
         @apply p-6;
